--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -6,4 +6,8 @@ COPY Trunk-Recorder/config.json config.json
 COPY Trunk-Recorder/UnitTags.csv UnitTags.csv
 COPY Trunk-Recorder/talkgroups.csv talkgroups.csv
 COPY Trunk-Recorder/transcribe.sh transcribe.sh
+RUN chmod +x transcribe.sh
 
+
+RUN apt-get update
+RUN apt-get install -y jq
