--- a/Trunk-Recorder/Dockerfile.template
+++ b/Trunk-Recorder/Dockerfile.template
@@ -5,6 +5,10 @@ ENV UDEV=on
 COPY config.json config.json
 COPY UnitTags.csv UnitTags.csv
 COPY talkgroups.csv talkgroups.csv
+COPY berkeley_talkgroups.csv berkeley_talkgroups.csv
+COPY albany_talkgroups.csv albany_talkgroups.csv
+COPY emeryville_talkgroups.csv emeryville_talkgroups.csv
+COPY oakland_talkgroups.csv oakland_talkgroups.csv
 COPY transcribe.sh transcribe.sh
 RUN chmod +x transcribe.sh
 
