--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -6,6 +6,21 @@ on:
     paths:
       - Trunk-Transcribe/**
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.21.x'
+      - name: Install dependencies
+        run: go get .
+      - name: Build
+        run: go build -v ./...
+      - name: Test with the Go CLI
+        run: go test
+        
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
