--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: Trunk-Transcribe
     steps:
       - uses: actions/checkout@v4
       - name: Setup Go
@@ -24,10 +27,13 @@ jobs:
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: Trunk-Transcribe
     concurrency: deploy-group    # optional: ensure only one action runs at a time
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy Trunk-Transcribe --remote-only --ha=false
+      - run: flyctl deploy --remote-only --ha=false
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
