--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -31,6 +31,7 @@ jobs:
       run:
         working-directory: Trunk-Transcribe
     concurrency: deploy-group    # optional: ensure only one action runs at a time
+    if: github.ref_name == github.event.repository.default_branch
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
