--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -35,6 +35,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only --ha=false
+      - run: flyctl deploy --remote-only --ha=true
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
