--- a/.github/workflows/balena.yml
+++ b/.github/workflows/balena.yml
@@ -15,6 +15,6 @@ jobs:
         id: build
         with:
           balena_token: ${{ secrets.BALENA_TOKEN }}
-          fleet: scanner-berkeley
+          fleet: g_naveen_gattu/scanner-berkeley
       - name: Log release ID built
         run: echo "Built release ID ${{ steps.build.outputs.release_id }}"
