--- a/Trunk-Recorder/config.json
+++ b/Trunk-Recorder/config.json
@@ -42,7 +42,29 @@
             "shortName": "Berkeley",
             "talkgroupsFile": "berkeley_talkgroups.csv",
             "unitTagsFile": "UnitTags.csv",
-	        "recordUnknown": false,
+	    "recordUnknown": false,
+	    "hideUnknownTalkgroups": true,
+            "squelch": -50,
+            "modulation": "qpsk",
+            "logLevel": "debug",
+	    "audioArchive": true,
+	    "callLog": true,
+	    "uploadScript": "/app/transcribe.sh",
+	    "enabled": true
+        },
+	{
+            "control_channels": [
+                773.46875e6,
+                773.74375e6,
+                774.21875e6,
+                774.49375e6
+            ],
+            "type": "p25",
+            "shortName": "Berkeley_Backup",
+            "talkgroupsFile": "berkeley_talkgroups.csv",
+            "unitTagsFile": "UnitTags.csv",
+	    "recordUnknown": false,
+	    "hideUnknownTalkgroups": true,
             "squelch": -50,
             "modulation": "qpsk",
             "logLevel": "debug",
@@ -63,6 +85,7 @@
             "talkgroupsFile": "albany_talkgroups.csv",
             "unitTagsFile": "UnitTags.csv",
             "recordUnknown": false,
+	    "hideUnknownTalkgroups": true,
             "squelch": -50,
             "modulation": "qpsk",
             "logLevel": "debug",
@@ -83,6 +106,7 @@
             "talkgroupsFile": "emeryville_talkgroups.csv",
             "unitTagsFile": "UnitTags.csv",
             "recordUnknown": false,
+            "hideUnknownTalkgroups": true,
             "squelch": -50,
             "modulation": "qpsk",
             "logLevel": "debug",
@@ -103,6 +127,7 @@
             "talkgroupsFile": "oakland_talkgroups.csv",
             "unitTagsFile": "UnitTags.csv",
             "recordUnknown": false,
+	    "hideUnknownTalkgroups": true,
             "squelch": -50,
             "modulation": "qpsk",
             "logLevel": "debug",
