--- a/Trunk-Recorder/config.json
+++ b/Trunk-Recorder/config.json
@@ -1,140 +1,140 @@
 {
-    "ver": 2,
-    "controlRetuneLimit": 5,
-    "sources": [
-        {
-            "center": 769.965625e6,
-            "rate": 2040000,
-            "error": 395,
-            "gain": 40,
-            "digitalRecorders": 12,
-            "driver": "osmosdr",
-            "device": "rtl=0"
-        },
-		{
-            "center": 772.09465e6,
-            "rate": 2040000,
-            "error": 395,
-            "gain": 40,
-            "digitalRecorders": 12,
-            "driver": "osmosdr",
-            "device": "rtl=1"
-        },
-        {
-            "center": 773.978125e6,
-            "rate": 1800000,
-            "error": 395,
-            "gain": 40,
-            "digitalRecorders": 0,
-            "driver": "osmosdr",
-            "device": "rtl=2"
-        }
-    ],
-    "systems": [
-        {
-            "control_channels": [
-                773.46875e6,
-                773.74375e6,
-                774.21875e6,
-                774.49375e6
-            ],
-            "type": "p25",
-            "shortName": "Berkeley",
-            "talkgroupsFile": "berkeley_talkgroups.csv",
-            "unitTagsFile": "UnitTags.csv",
-	    "recordUnknown": false,
-	    "hideUnknownTalkgroups": true,
-            "squelch": -50,
-            "modulation": "qpsk",
-            "logLevel": "debug",
-	    "audioArchive": true,
-	    "callLog": true,
-	    "uploadScript": "/app/transcribe.sh",
-	    "enabled": true
-        },
-	{
-            "control_channels": [
-                773.46875e6,
-                773.74375e6,
-                774.21875e6,
-                774.49375e6
-            ],
-            "type": "p25",
-            "shortName": "Berkeley_Backup",
-            "talkgroupsFile": "berkeley_talkgroups.csv",
-            "unitTagsFile": "UnitTags.csv",
-	    "recordUnknown": false,
-	    "hideUnknownTalkgroups": true,
-            "squelch": -50,
-            "modulation": "qpsk",
-            "logLevel": "debug",
-	    "audioArchive": true,
-	    "callLog": true,
-	    "uploadScript": "/app/transcribe.sh",
-	    "enabled": true
-        },
-        {
-            "control_channels": [
-                773.46875e6,
-                773.74375e6,
-                774.21875e6,
-                774.49375e6
-            ],
-            "type": "p25",
-            "shortName": "Albany",
-            "talkgroupsFile": "albany_talkgroups.csv",
-            "unitTagsFile": "UnitTags.csv",
-            "recordUnknown": false,
-	    "hideUnknownTalkgroups": true,
-            "squelch": -50,
-            "modulation": "qpsk",
-            "logLevel": "debug",
-            "audioArchive": true,
-            "callLog": true,
-            "uploadScript": "/app/transcribe.sh",
-	    "enabled": false
-        },
-        {
-            "control_channels": [
-                773.46875e6,
-                773.74375e6,
-                774.21875e6,
-                774.49375e6
-            ],
-            "type": "p25",
-            "shortName": "Emeryville",
-            "talkgroupsFile": "emeryville_talkgroups.csv",
-            "unitTagsFile": "UnitTags.csv",
-            "recordUnknown": false,
-            "hideUnknownTalkgroups": true,
-            "squelch": -50,
-            "modulation": "qpsk",
-            "logLevel": "debug",
-            "audioArchive": true,
-            "callLog": true,
-            "uploadScript": "/app/transcribe.sh",
-	    "enabled": false
-        },
-        {
-            "control_channels": [
-                773.46875e6,
-                773.74375e6,
-                774.21875e6,
-                774.49375e6
-            ],
-            "type": "p25",
-            "shortName": "Oakland",
-            "talkgroupsFile": "oakland_talkgroups.csv",
-            "unitTagsFile": "UnitTags.csv",
-            "recordUnknown": false,
-	    "hideUnknownTalkgroups": true,
-            "squelch": -50,
-            "modulation": "qpsk",
-            "logLevel": "debug",
-            "audioArchive": true,
-            "callLog": true,
-            "uploadScript": "/app/transcribe.sh",
-	    "enabled": false
-        }
-    ]
+  "ver": 2,
+  "controlRetuneLimit": 5,
+  "sources": [
+    {
+      "center": 769965625,
+      "rate": 2040000,
+      "error": 395,
+      "gain": 40,
+      "digitalRecorders": 12,
+      "driver": "osmosdr",
+      "device": "rtl=0"
+    },
+    {
+      "center": 772094650,
+      "rate": 2040000,
+      "error": 395,
+      "gain": 40,
+      "digitalRecorders": 12,
+      "driver": "osmosdr",
+      "device": "rtl=1"
+    },
+    {
+      "center": 773978125,
+      "rate": 1800000,
+      "error": 395,
+      "gain": 40,
+      "digitalRecorders": 0,
+      "driver": "osmosdr",
+      "device": "rtl=2"
+    }
+  ],
+  "systems": [
+    {
+      "control_channels": [
+        773468750,
+        773743750,
+        774218750,
+        774493750
+      ],
+      "type": "p25",
+      "shortName": "Berkeley",
+      "talkgroupsFile": "berkeley_talkgroups.csv",
+      "unitTagsFile": "UnitTags.csv",
+      "recordUnknown": false,
+      "hideUnknownTalkgroups": true,
+      "squelch": -50,
+      "modulation": "qpsk",
+      "logLevel": "debug",
+      "audioArchive": true,
+      "callLog": true,
+      "uploadScript": "/app/transcribe.sh",
+      "enabled": false
+    },
+    {
+      "control_channels": [
+        773468750,
+        773743750,
+        774218750,
+        774493750
+      ],
+      "type": "p25",
+      "shortName": "Berkeley_Backup",
+      "talkgroupsFile": "berkeley_talkgroups.csv",
+      "unitTagsFile": "UnitTags.csv",
+      "recordUnknown": false,
+      "hideUnknownTalkgroups": true,
+      "squelch": -50,
+      "modulation": "qpsk",
+      "logLevel": "debug",
+      "audioArchive": true,
+      "callLog": true,
+      "uploadScript": "/app/transcribe.sh",
+      "enabled": true
+    },
+    {
+      "control_channels": [
+        773468750,
+        773743750,
+        774218750,
+        774493750
+      ],
+      "type": "p25",
+      "shortName": "Albany",
+      "talkgroupsFile": "albany_talkgroups.csv",
+      "unitTagsFile": "UnitTags.csv",
+      "recordUnknown": false,
+      "hideUnknownTalkgroups": true,
+      "squelch": -50,
+      "modulation": "qpsk",
+      "logLevel": "debug",
+      "audioArchive": true,
+      "callLog": true,
+      "uploadScript": "/app/transcribe.sh",
+      "enabled": true
+    },
+    {
+      "control_channels": [
+        773468750,
+        773743750,
+        774218750,
+        774493750
+      ],
+      "type": "p25",
+      "shortName": "Emeryville",
+      "talkgroupsFile": "emeryville_talkgroups.csv",
+      "unitTagsFile": "UnitTags.csv",
+      "recordUnknown": false,
+      "hideUnknownTalkgroups": true,
+      "squelch": -50,
+      "modulation": "qpsk",
+      "logLevel": "debug",
+      "audioArchive": true,
+      "callLog": true,
+      "uploadScript": "/app/transcribe.sh",
+      "enabled": true
+    },
+    {
+      "control_channels": [
+        773468750,
+        773743750,
+        774218750,
+        774493750
+      ],
+      "type": "p25",
+      "shortName": "Oakland",
+      "talkgroupsFile": "oakland_talkgroups.csv",
+      "unitTagsFile": "UnitTags.csv",
+      "recordUnknown": false,
+      "hideUnknownTalkgroups": true,
+      "squelch": -50,
+      "modulation": "qpsk",
+      "logLevel": "debug",
+      "audioArchive": true,
+      "callLog": true,
+      "uploadScript": "/app/transcribe.sh",
+      "enabled": true
+    }
+  ]
 }
