--- a/Trunk-Transcribe/fly.toml
+++ b/Trunk-Transcribe/fly.toml
@@ -7,8 +7,7 @@ app = "trunk-transcribe"
 primary_region = "sjc"
 
 [build]
-  builder = "paketobuildpacks/builder:base"
-  buildpacks = ["gcr.io/paketo-buildpacks/go"]
+  dockerfile = "Dockerfile"
 
 [env]
   PORT = "8080"
