--- a/Trunk-Recorder/Dockerfile.template
+++ b/Trunk-Recorder/Dockerfile.template
@@ -16,3 +16,4 @@ RUN chmod +x transcribe.sh
 RUN apt-get update
 RUN apt-get install -y jq
 RUN apt-get install -y vim
+RUN apt-get install -y ffmpeg
