Specify source dir for balena image

--- a/.github/workflows/balena.yml
+++ b/.github/workflows/balena.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           balena_token: ${{ secrets.BALENA_TOKEN }}
           fleet: g_naveen_gattu/scanner-eastbay
+          source: Trunk-Recorder
       - name: Log release ID built
         working-directory: ./Trunk-Recorder
         run: echo "Built release ID ${{ steps.build.outputs.release_id }}"
