--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -19,10 +19,12 @@ jobs:
           go-version: '1.21.x'
       - name: Install dependencies
         run: go get .
+      - name: Install ffmpeg
+        run: sudo apt install -y ffmpeg
       - name: Build
         run: go build -v ./...
       - name: Test with the Go CLI
-        run: go test
+        run: go test      
         
   deploy:
     name: Deploy app
