--- a/.github/workflows/balena.yml
+++ b/.github/workflows/balena.yml
@@ -1,3 +1,4 @@
+name: Balena Deploy
 on:
   push:
     branches:
@@ -7,7 +8,7 @@ on:
       - Trunk-Recorder/**
 
 jobs:
-  balena_cloud_build:
+  trunked_deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -16,7 +17,20 @@ jobs:
         with:
           balena_token: ${{ secrets.BALENA_TOKEN }}
           fleet: g_naveen_gattu/scanner-eastbay
-          source: Trunk-Recorder
+          source: Recorder/Trunked
       - name: Log release ID built
-        working-directory: ./Trunk-Recorder
+        working-directory: ./Recorder/Trunked
+        run: echo "Built release ID ${{ steps.build.outputs.release_id }}"
+  conventional_deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: balena-io/deploy-to-balena-action@master
+        id: build
+        with:
+          balena_token: ${{ secrets.BALENA_TOKEN }}
+          fleet: g_naveen_gattu/scanner-eastbay-conventional
+          source: Recorder/Conventional
+      - name: Log release ID built
+        working-directory: ./Recorder/Conventional
         run: echo "Built release ID ${{ steps.build.outputs.release_id }}"
