--- a/Recorder/Conventional/Dockerfile.template
+++ b/Recorder/Conventional/Dockerfile.template
@@ -3,7 +3,8 @@ FROM robotastic/trunk-recorder:5.0.2
 ENV UDEV=on
 
 COPY config.json config.json
-COPY ../transcribe.sh transcribe.sh
+COPY berkeley_channels.csv berkeley_channels.csv
+COPY transcribe.sh transcribe.sh
 RUN chmod +x transcribe.sh
 
 RUN apt-get update
