--- a/Recorder/Conventional/config.json
+++ b/Recorder/Conventional/config.json
@@ -24,17 +24,16 @@
   "systems": [
     {
       "shortName": "Berk-Cnv",
-      "type": "conventionalP25", 
-      "channels": [156165000, 453525000, 4533375000],
+      "type": "conventional",      
       "channelFile": "berkeley_channels.csv",
       "unitTagsFile": "UnitTags.csv",
       "recordUnknown": false,
-      "hideUnknownTalkgroups": true,
+      "hideUnknownTalkgroups": false,
       "squelch": -50,
       "modulation": "qpsk",
       "logLevel": "debug",
-      "audioArchive": true,
-      "callLog": true,
+      "audioArchive": false,
+      "callLog": false,
       "uploadScript": "/app/transcribe.sh",
       "enabled": true
     }
