--- a/Recorder/Trunked/Dockerfile.template
+++ b/Recorder/Trunked/Dockerfile.template
@@ -9,6 +9,7 @@ COPY berkeley_talkgroups.csv berkeley_talkgroups.csv
 COPY albany_talkgroups.csv albany_talkgroups.csv
 COPY emeryville_talkgroups.csv emeryville_talkgroups.csv
 COPY oakland_talkgroups.csv oakland_talkgroups.csv
+COPY oakland_hospitals_talkgroups.csv oakland_hospitals_talkgroups.csv
 COPY transcribe.sh transcribe.sh
 RUN chmod +x transcribe.sh
 
