Ensure audio and meta is persisted

--- a/Recorder/Conventional/config.json
+++ b/Recorder/Conventional/config.json
@@ -32,8 +32,8 @@
       "squelch": -50,
       "modulation": "qpsk",
       "logLevel": "debug",
-      "audioArchive": false,
-      "callLog": false,
+      "audioArchive": true,
+      "callLog": true,
       "uploadScript": "/app/transcribe.sh",
       "enabled": true
     }
