--- a/Recorder/Trunked/config.json
+++ b/Recorder/Trunked/config.json
@@ -71,7 +71,7 @@
       "audioArchive": true,
       "callLog": true,
       "uploadScript": "/app/transcribe.sh",
-      "enabled": true
+      "enabled": false
     },
     {
       "control_channels": [
@@ -92,7 +92,7 @@
       "audioArchive": true,
       "callLog": true,
       "uploadScript": "/app/transcribe.sh",
-      "enabled": true
+      "enabled": false
     },
     {
       "control_channels": [
